Styling page design | GET, POST, DELETE methods done

--- a/public/pages/notes.html
+++ b/public/pages/notes.html
@@ -16,11 +16,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="../images/Notetaker.png">
   </head>
 
   <body>
-    <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Note Taker </a>
+    <nav class="navbar navbar-dark">
+      <a class="navbar-brand" href="/">Note Taker 🗒️</a>
       <div class="icons">
         <i class="fas fa-save text-light save-note"></i>
         <i class="fas fa-plus text-light new-note"></i>
