--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+  <link rel="icon" type="image/x-icon" href="./images/Notetaker.png">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+  <nav class="navbar navbar-dark">
+    <a class="navbar-brand" href="/">Note Taker 🗒️
     </a>
   </nav>
   <div class="container">
@@ -19,6 +21,7 @@
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
+      <h5 class="mt-4">Made with ❤️ by <b><a href="https://github.com/RaulMaya">RM</a></b></h5>
     </div>
   </div>
   <script src="/assets/js/index.js"></script>
