--- a/public/pages/notes.html
+++ b/public/pages/notes.html
@@ -16,10 +16,50 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/assets/css/styles.css" />
-    <link rel="icon" type="image/x-icon" href="../images/Notetaker.png">
+    <link rel="icon" type="image/x-icon" href="../images/Notetaker.png" />
   </head>
 
   <body>
+    <div id="backdrop"></div>
+    <!-- Modal -->
+    <div
+      class="modal"
+      id="exampleModalCenter"
+      tabindex="100"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Delete Note</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span id="cross" aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this note?
+          </div>
+          <div class="modal-footer">
+            <button
+              id="btn-delete"
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Delete
+            </button>
+            <button id="btn-keep" type="button" class="btn btn-primary">Keep</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <nav class="navbar navbar-dark">
       <a class="navbar-brand" href="/">Note Taker 🗒️</a>
       <div class="icons">
